# myProgramLanguage_new

./: CMakeLists.txt  README.md
src/: lexer.cpp  lexer.h  main.cpp  parser.cpp  parser.h  programLanguageView.cpp  programLanguageView.h  programLanguageView.ui  semantic.cpp  semantic.h  test.cpp  tockens.cpp  tockens.h  tokenDistributor.cpp  tokenDistributor.h
